package ejercicios;

public class Sensor extends Herramientas {

    final static float peso = 250;

    @Override
    public float getPeso() {
        return super.getPeso();
    }

    public Sensor() {
        super(herramienta);
    }
}
